exports[`LogHeader should render when buttons are provided 1`] = `
<div
  className="core-log-header">
  <div
    className="core-log-header-text">
    Log
  </div>
  <div
    className="core-padded-row core-log-header-buttons">
    <button
      className="btn btn-primary btn-xs core-btn "
      onClick={[Function]}
      title="Foo button">
      <span
        aria-hidden="true"
        className="foo-btn-class" />
    </button>
    <button
      className="btn btn-primary btn-xs core-btn "
      onClick={[Function]}
      title="Bar button">
      <span
        aria-hidden="true"
        className="bar-btn-class" />
    </button>
  </div>
</div>
`;

exports[`LogHeader should render when selected button is provided 1`] = `
<div
  className="core-log-header">
  <div
    className="core-log-header-text">
    Log
  </div>
  <div
    className="core-padded-row core-log-header-buttons">
    <button
      className="btn btn-primary btn-xs core-btn active"
      onClick={[Function]}
      title="Foo button">
      <span
        aria-hidden="true"
        className="foo-btn-class" />
    </button>
  </div>
</div>
`;

exports[`LogHeader should render when text and no buttons provided 1`] = `
<div
  className="core-log-header">
  <div
    className="core-log-header-text">
    Foobar log header
  </div>
  <div
    className="core-padded-row core-log-header-buttons" />
</div>
`;
